@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.5.14
 ------------------------
+ o subset tip in geom_tiplab2 <2016-10-05, Wed>
  o add `compute_group` according to ggplot (v2.1.0) <2016-09-29, Thu>
    + https://github.com/hadley/ggplot2/issues/1797
  o unit test for groupOTU and groupClade <2016-09-22, Thu>
